feat: add /ping
