# main.go
@@ -76,6 +76,7 @@ func handleRequest() {
 	myRouter.HandleFunc("/hello", handlers.ReturnHello).Methods("POST")
 	myRouter.HandleFunc("/hello", handlers.ReturnHello)
 	myRouter.HandleFunc("/sss", handlers.ReturnSSS)
+	myRouter.HandleFunc("/ping", handlers.Ping)
 
 	myRouter.PathPrefix("/swagger").Handler(httpSwagger.WrapHandler)
 	myRouter.HandleFunc("/", handlers.HomePage)
